--- a/client/vite-project/src/Layout/Layout.module.css
+++ b/client/vite-project/src/Layout/Layout.module.css
@@ -1,33 +1,12 @@
-/* Styles de base - mobile */
-.container {
-	display: flex;
-	flex-direction: column;
-	height: 100vh;
-}
-
-.header {
-	background-color: #282c34;
-	color: white;
-	padding: 1rem;
-}
-
+/* Supprime cette redondance si elle entre en conflit */
 .navbar {
 	display: flex;
 	gap: 1rem;
 	flex-wrap: wrap;
 	justify-content: center;
 }
-
-.footer {
-	background-color: #282c34;
+.header {
+	background-color: #000;
 	color: white;
-	padding: 1rem;
-	text-align: center;
-}
-
-/* Styles spécifiques aux écrans larges */
-@media (min-width: 768px) {
-	.navbar {
-		justify-content: space-around;
-	}
+	padding: 0; /* le padding est géré dans NavBar */
 }
