--- a/client/vite-project/src/components/NavBar/NavBar.module.css
+++ b/client/vite-project/src/components/NavBar/NavBar.module.css
@@ -35,6 +35,11 @@
 	z-index: 1;
 }
 
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
 .title {
 	font-family: "RageItalic", cursive;
 	font-size: 3rem;
@@ -43,6 +48,20 @@
 		var(--neon-pink), 0 0 40px var(--neon-purple);
 	animation: neonFlicker 3s infinite;
 	margin: 0;
+	position: relative;
+}
+
+.title::after {
+	content: "Cocktail";
+	position: absolute;
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	color: white;
+	text-shadow: 0 0 5px white, 0 0 30px white, 0 0 50px white;
+	mix-blend-mode: screen;
+	pointer-events: none;
+	opacity: 0.6;
 }
 
 /* Neon Icon Styles */
